# wasm-study

./: README.md  rust-toolchain.toml
wasi-cli-sample/: Cargo.toml
wasm-component/: Cargo.toml  README.md
wasm-component-deps-and-composition/: Cargo.toml  README.md
wasm-component-deps-and-composition/caller-with-composed-component/: Cargo.toml
wasm-component-deps-and-composition/caller-with-composed-component/src/: bindings.rs  wasm_component_loader.rs
wasm-component-deps-and-composition/caller-with-composed-component/wit/: composed-greet.wit
wasm-component-deps-and-composition/dynamic-deps-with-native-code/: Cargo.toml
wasm-component-deps-and-composition/dynamic-deps-with-native-code-in-wasip1/: Cargo.toml
wasm-component-deps-and-composition/dynamic-deps-with-native-code-in-wasip1/src/: cli.rs  main.rs  say.rs
wasm-component-deps-and-composition/dynamic-deps-with-native-code/src/: say.rs
wasm-component-deps-and-composition/lib/greet/: Cargo.toml
wasm-component-deps-and-composition/lib/greet/src/: bindings.rs  lib.rs
wasm-component-deps-and-composition/lib/say/: Cargo.toml
wasm-component-deps-and-composition/lib/say/src/: bindings.rs  lib.rs
wasm-component-deps-and-composition/lib/say/wit/: greetable.wit  sayable.wit
wasm-component/wasm-lib-component/: Cargo.toml
wasm-component/wasm-lib-component-caller/: Cargo.toml
wasm-component/wasm-lib-component-caller-with-bindgen/: Cargo.toml
wasm-component/wasm-lib-component-caller-with-bindgen/src/: main.rs
wasm-component/wasm-lib-component-caller-with-wasmtime-bindgen/: Cargo.toml
wasm-component/wasm-lib-component-caller-with-wasmtime-bindgen/src/: wasm_component_loader.rs
wasm-component/wasm-lib-component-caller/src/: wasm_component_loader.rs
wasm-component/wasm-lib-component/src/: bindings.rs  lib.rs
wasm-component/wasm-lib-component/wit/: greetable.wit
wasm-docker/: Cargo.toml  Dockerfile  README.md
wasm-docker/src/: main.rs
wasm-grep/: Cargo.toml  README.md
wasm-grep/src/: cli.rs  file_reader.rs  main.rs
wasm-hello-world/: Cargo.toml  README.md
wat2wasm/: README.md  add.wat
