[workspace]
members = [
    "lib/greet",
    "lib/say",
    "caller-with-composed-component",
    "dynamic-deps-with-native-code",
    "dynamic-deps-with-native-code-in-wasip1",
]

[workspace.package]
name = "wasm-component-deps-and-composition"
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
wit-bindgen-rt = { version = "0.34.0", features = ["bitflags"] }
