[workspace]
members = [
    "wasm-lib-component",
    "wasm-lib-component-caller",
    "wasm-lib-component-caller-with-wasmtime-bindgen"
]

[workspace.package]
name = "wasm-component"
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
wit-bindgen-rt = { version = "0.34.0", features = ["bitflags"] }
