[package]
name = "wasm-lib-component-caller"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = "1.0.91"
clap = { version = "4.5.20", features = ["derive"] }
wasmtime = "26.0.0"
wit-bindgen-rt = { workspace = true }

[profile.release]
codegen-units = 1
opt-level = "s"
debug = false
strip = true
lto = true

[package.metadata.component]
package = "component:wasm-lib-component-caller"

[package.metadata.component.dependencies]
