[package]
name = "wasm-lib-component"
version.workspace = true
edition.workspace = true

[dependencies]
wit-bindgen-rt = { workspace = true }

[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
opt-level = "s"
debug = false
strip = true
lto = true

[package.metadata.component]
package = "wasm-study:wasm-lib-component"

[package.metadata.component.dependencies]
